src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Date_of_Last_Survey_Sent__c</fullName>
        <inlineHelpText>Created by &quot;Sales Optimizer&quot; in 2012. If you are using this field, tell Maria what you&apos;re using it for!</inlineHelpText>
        <label>zDate of Last Survey Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Performance__c</fullName>
        <inlineHelpText>How well is this partnership deal performing?</inlineHelpText>
        <label>zDeal Performance</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decision_Making_Process__c</fullName>
        <description>BizDev</description>
        <inlineHelpText>Process and contact details for the Contact Roles associated to this account</inlineHelpText>
        <label>zDecision Making Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Timeline__c</fullName>
        <description>BizDev</description>
        <inlineHelpText>Should this be a date field, picklist or text?</inlineHelpText>
        <label>zDecision Timeline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declined_Reason__c</fullName>
        <description>Why did we decline this partner? For Partner team use.</description>
        <inlineHelpText>Why did we decline this partner? For Partner team use.</inlineHelpText>
        <label>zPAR Declined Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Can’t bring revenue in 90 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could Not Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not enough revenue potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No value added service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Partner Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Not A Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Design_Partner_ID__c</fullName>
        <description>Design Partner Salesforce ID. For use in reporting.</description>
        <formula>Design_Partner__r.Id</formula>
        <inlineHelpText>Design Partner Salesforce ID. For use in reporting.</inlineHelpText>
        <label>PAR Design Partner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Designates which partner BigCommerce has brought in to help with a client&apos;s design</inlineHelpText>
        <label>Design Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Designer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Design Partners</relationshipLabel>
        <relationshipName>Design_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Design_Referral_Email__c</fullName>
        <description>This is the email address that should receive lead referral notifications from Bigcommerce</description>
        <inlineHelpText>This is the email address that should receive lead referral notifications from Bigcommerce</inlineHelpText>
        <label>zDesign Referral Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dialer_Priority__c</fullName>
        <inlineHelpText>Used for I3 Dialer Priority</inlineHelpText>
        <label>Dialer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Express Routing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Priority Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dialer_Status__c</fullName>
        <description>This is used for the dialer feed to help the issue of calls being routed to the dialer when the client is not interested in speaking with BC on a new trial.</description>
        <inlineHelpText>Enter Closed if the Contact wants to be removed from the dialer.</inlineHelpText>
        <label>Dialer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp;Id&amp;&apos;/e&apos;,&apos;edit&apos;,&apos;_blank&apos;)</formula>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_Preference__c</fullName>
        <description>used by Partner team so they know which client leads they should not call</description>
        <inlineHelpText>Does Partner want to be contacted periodically? For use by partner team.</inlineHelpText>
        <label>zPAR Engagement Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Contact Leads Directly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Partner Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engagement__c</fullName>
        <description>Engagement level. For use by the partner team.</description>
        <inlineHelpText>Engagement level. For use by the partner team.</inlineHelpText>
        <label>zPAR Engagement</label>
        <picklist>
            <picklistValues>
                <fullName>Automated 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hands On</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enterprise_Account__c</fullName>
        <description>Indicates that there is a paid Enterprise store on the Account</description>
        <inlineHelpText>Indicates that there is a paid Enterprise store on the Account</inlineHelpText>
        <label>Has Enterprise Store?</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Store Purchase</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Purchased</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.MonthlyRecurringRevenue__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Product__c</field>
            <operation>contains</operation>
            <value>Enterprise</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Est_Churn_Date__c</fullName>
        <description>Estimated Date that client will churn, as predicted by Enterprise Account Management team member</description>
        <inlineHelpText>Estimated Date that client will churn, as predicted by Enterprise Account Management team member</inlineHelpText>
        <label>Est Churn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Example_Site__c</fullName>
        <description>Design Partner data for recommended accounts</description>
        <label>zExample Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsorship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executive Sponsorship?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <picklist>
            <picklistValues>
                <fullName>New to eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced with eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switching from a Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Web Designer/Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set up a new online business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch from a different ecommerce platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add an online store to my brick-and-mortar business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyal Bigcommerce client adding another store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m doing research as a student, app developer or job applicant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_of_Month__c</fullName>
        <label>REPORT: First of  Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Google__c</fullName>
        <label>Google+</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Activity__c</fullName>
        <description>Has there EVER been any activity (tasks or event) logged on this account?</description>
        <formula>IF(ISBLANK( LastActivityDate ) = FALSE, 1, NULL)</formula>
        <inlineHelpText>Has there EVER been any activity (tasks or event) logged on this account?</inlineHelpText>
        <label>Has Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Health_Score__c</fullName>
        <description>Executive Sponsor Health Score as set by Executive Sponsor</description>
        <inlineHelpText>Executive Sponsor Health Score a sset by this account&apos;s Executive Sponsor</inlineHelpText>
        <label>Executive Sponsor Health Score</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hourly_Project_Cost__c</fullName>
        <description>Design Partner data for recommended accounts</description>
        <label>zHourly Project Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hubspot_Client_Age__c</fullName>
        <description>populated from WFR when Client Age changes</description>
        <inlineHelpText>Sents the Client Age to Hubspot - Admins only can view this field</inlineHelpText>
        <label>zMKT Hubspot Client Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I3_Menu_Option__c</fullName>
        <formula>if(( ISPICKVAL(Dialer_Priority__c,&quot;Priority Support&quot;)),4, 
if(( ISPICKVAL(Dialer_Priority__c,&quot;Express Routing&quot;)),3, 
if((Active_Stores_Opp__c &gt;0 &amp;&amp; Client_Age__c &gt;180),2, 
if((Active_Stores_Opp__c &gt;0 &amp;&amp; Total_Active_Store_GMV__c &gt;100),2, 
if((Active_Stores_Opp__c &gt;0),1, 
if((Active_Trials_Opp__c &gt;0),1, 
0))))))</formula>
        <label>I3 Menu Option</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integration_Requirements__c</fullName>
        <description>BizDev</description>
        <inlineHelpText>Should this be a picklist or text?</inlineHelpText>
        <label>zIntegration Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Launch_Team_Commando__c</fullName>
        <label>zLaunch Team Commando OLD</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assignment_Method__c</fullName>
        <description>When this lead was created, how was it assigned to an owner?</description>
        <label>zLead Assignment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned to Creator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round Robin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same as existing lead (email)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same as existing lead (phone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same as existing contact (email)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same as existing account (phone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migrated from another user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition team lead (email)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition team lead (phone)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Stage__c</fullName>
        <description>Mapped over from Lead</description>
        <inlineHelpText>Stage mapped over from Lead on convert.</inlineHelpText>
        <label>zLead Stage</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Un-Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing: New Trial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <description>design partner field</description>
        <label>zLead Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifetime_MRR_Total__c</fullName>
        <inlineHelpText>Sum of Monthly Recurring Revenue field regardless of status</inlineHelpText>
        <label>zLifetime MRR Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ltc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MBAAccountID__c</fullName>
        <externalId>true</externalId>
        <label>MBA Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBAHostingID__c</fullName>
        <description>The ID of this record in MyBigAccount</description>
        <label>zOLD MBAHostingID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBAUserID__c</fullName>
        <description>from MyBigAccounts - ported from lead conversion</description>
        <label>zOLD MBAUserID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBA_Account_ID_Size__c</fullName>
        <formula>LEN( MBAAccountID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MBA Account ID Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MBA_Partner_ID__c</fullName>
        <description>integrated to MBA - do not delete</description>
        <label>MBA Partner ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MKT_Account_Owner_Team__c</fullName>
        <description>Text of the Account:Owner Team field. Created so Hubspot can read the field.</description>
        <inlineHelpText>Text of the Account:Owner Team field. Created so Hubspot can read the field. Populated when the owner ID changes.</inlineHelpText>
        <label>zMKT Account Owner Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKT_Most_Recent_Purchase_Date__c</fullName>
        <description>Populated with the most recent purchase date of all the accounts&apos; opportunities. Used to communicate the date that a new store goes to paid on an account to Hubspot.</description>
        <inlineHelpText>Populated with the most recent purchase date of all the accounts&apos; opportunities. Used to communicate the date that a new store goes to paid on an account to Hubspot</inlineHelpText>
        <label>zMKT: Most Recent Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MKT_UTM_Campaign__c</fullName>
        <description>MKT UTM Campaign, populated from lead on convert</description>
        <inlineHelpText>MKT UTM Campaign, populated from lead on convert</inlineHelpText>
        <label>MKT UTM Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKT_UTM_Medium__c</fullName>
        <description>MKT UTM Medium, populated from lead on convert</description>
        <inlineHelpText>MKT UTM Medium, populated from lead on convert</inlineHelpText>
        <label>MKT UTM Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKT_UTM_Source__c</fullName>
        <description>MKT UTM Source, populated from lead on convert</description>
        <inlineHelpText>MKT UTM Source, populated from lead on convert</inlineHelpText>
        <label>MKT UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Promotion__c</fullName>
        <description>Marketing promotion. Not sure how this field is populated.</description>
        <inlineHelpText>Stores marketing promotion value.</inlineHelpText>
        <label>zMKT Promotion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Test__c</fullName>
        <description>Used to determine whether account will be included in marketing test group</description>
        <inlineHelpText>Used to determine whether account will be included in marketing test group</inlineHelpText>
        <label>zMKT Marketing Test</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxSub_BillingAmount__c</fullName>
        <description>Used in subscription data roll-up trigger</description>
        <label>zMaxSub Billing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MaxSub_BillingCycle__c</fullName>
        <description>Used in subscription data roll-up trigger</description>
        <label>zMaxSub Billing Cycle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxSub_ExpirationDate__c</fullName>
        <description>Used in subscription data roll-up trigger</description>
        <label>zMaxSub Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaxSub_ID__c</fullName>
        <formula>MaxSub_Subscription__c</formula>
        <label>zMaxSub ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxSub_IsTrial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in subscription data roll-up trigger</description>
        <inlineHelpText>Used in subscription data roll-up trigger</inlineHelpText>
        <label>zMaxSub Is Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxSub_MonthlyRecurringRevenue__c</fullName>
        <description>Used in subscription data roll-up trigger</description>
        <label>MaxSub Monthly Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MaxSub_Product__c</fullName>
        <description>Used in subscription data roll-up trigger</description>
        <label>MaxSub Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxSub_PurchaseDate__c</fullName>
        <description>Used in subscription data roll-up trigger</description>
        <label>zMaxSub Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaxSub_Purchase_Team__c</fullName>
        <description>Used in subscription data roll-up trigger</description>
        <label>zMaxSub Purchase Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxSub_StartDate__c</fullName>
        <description>Used in subscription data roll-up trigger</description>
        <label>zMaxSub Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaxSub_Status__c</fullName>
        <description>Used in subscription data roll-up trigger</description>
        <label>zMaxSub Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxSub_Store_URL__c</fullName>
        <description>used for Marketo cross-sell emails.  Populated by WFR but should be added to code</description>
        <label>MaxSub Store URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MaxSub_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in subscription data roll-up trigger</description>
        <label>zMaxSub Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>MaxSub Account</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Enterprise_Tier__c</fullName>
        <description>Maximum Enterprise Tier</description>
        <label>Max Enterprise Tier</label>
        <summarizedField>Opportunity.Enterprise_Tier__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Store Purchase</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Status__c</field>
            <operation>equals</operation>
            <value>Active, Suspended</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Store_URL__c</fullName>
        <description>Used for Marketo post-purchase flows.</description>
        <label>Most Recent Store URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NDA_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for BizDev</description>
        <label>zNDA Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_Profile__c</fullName>
        <description>BizDev</description>
        <inlineHelpText>zWhat is the problem that we are solving for? (real or perceived)</inlineHelpText>
        <label>zNeed Profile</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Store_Revenue__c</fullName>
        <description>Non-store revenue from Opportunities</description>
        <inlineHelpText>Revenue from one-time purchased products (SSLs/Domains).</inlineHelpText>
        <label>Non-Store Revenue</label>
        <summarizedField>Opportunity.BillingAmount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>One-Time Product</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Partner_Opportunities__c</fullName>
        <description>Number of Opportunities that are associated with a partner</description>
        <inlineHelpText>Number of Partner Opportunities that are associated with a client account, to show how many opportunities were sourced by a partner</inlineHelpText>
        <label>Number of Partner Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.MBAPartnerID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OLD_Appointment_Source__c</fullName>
        <description>professional services. hidden 1/14/14; can delete a month later</description>
        <label>zOLD Appointment Source</label>
        <picklist>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success Squad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OLD_Client_Service_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>hidden 1/14/14; can delete a month later</description>
        <label>zOLD Client Service Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OLD_Ongoing_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>hidden 1/14/14; can delete a month later</description>
        <inlineHelpText>Client&apos;s that are walking through multiple Success Squad sessions</inlineHelpText>
        <label>zOLD Ongoing Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OLD_PS_Status__c</fullName>
        <description>hidden 1/14/14; can delete a month later
professional services team status for appointment setting</description>
        <label>zOLD PS Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1st Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment Held : Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appointment Held : Not Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OLD_Survey_Contact_Email__c</fullName>
        <description>hidden 1/14/14; can delete a month later</description>
        <label>zOLD Survey Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OLD_Survey_Contact_Name__c</fullName>
        <description>hidden 1/14/14; can delete a month later</description>
        <formula>OLD_Survey_Contact__r.FirstName</formula>
        <label>zOLD Survey Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLD_Survey_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>hidden 1/14/14; can delete a month later</description>
        <inlineHelpText>Once this field is populated, the Success Squad survey link will be emailed to this contact</inlineHelpText>
        <label>zOLD Survey Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OLD_Survey_Date__c</fullName>
        <description>hidden 1/14/14; can delete a month later
WFR population</description>
        <label>zOLD Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OLD_Survey_Link_Success_Squad_Acq__c</fullName>
        <description>hidden 1/14/14; can delete a month later</description>
        <label>zOLD Survey Link : Success Squad Acq</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OLD_Survey_Link_Success_Squad__c</fullName>
        <description>hidden 1/14/14; can delete a month later</description>
        <label>zOLD Survey Link : Success Squad</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OLD_Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>hidden 1/14/14; can delete a month later
for success squad surveys</description>
        <label>zOLD Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onboarding_MRR__c</fullName>
        <description>How much revenue did the partner generate while in the onboarding status?</description>
        <inlineHelpText>How much revenue did the partner generate while in the onboarding status?</inlineHelpText>
        <label>zPAR: Onboarding MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Migration_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of migration cases that are not closed or completed. Used in Marketing Hubspot workflows.</description>
        <inlineHelpText>Count of migration cases that are not closed or completed. Used in Marketing Hubspot workflows.</inlineHelpText>
        <label>MKT # Open Migration Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <description>for reporting purposes only; not visible on layouts</description>
        <formula>OwnerId</formula>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
</CustomObject>